--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-dom": "latest",
     "openai": "^4.0.0",
     "qrcode": "^1.5.0",
-    "sharp": "^0.32.0"
+    "sharp": "^0.32.0",
+    "lucide-react": "^0.265.0"
+
   }
 }
