--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "build": "next build",
     "start": "next start"
   },
+{
   "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "openai": "^4.0.0",
-    "qrcode": "^1.5.0",
-    "sharp": "^0.32.0",
+    "next": "15.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "lucide-react": "^0.265.0"
-
   }
 }
+
+
+
