--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "visual-abstract-generator",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
-{
   "dependencies": {
     "next": "15.3.1",
     "react": "18.2.0",
