--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "next": "15.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "lucide-react": "^0.265.0"
+    "lucide-react": "^0.265.0",
+    "qrcode": "^1.5.1",
+    "canvas": "^2.11.2",
+    "openai": "^4.30.0"
   }
 }
