--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "build": "next build",
     "start": "next start"
   },
-  "dependencies": {
-    "next": "15.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "lucide-react": "^0.265.0",
-    "qrcode": "^1.5.1",
-    "canvas": "^2.11.2",
-    "openai": "^4.30.0"
-  }
+"dependencies": {
+  "next": "15.3.1",
+  "react": "18.2.0",
+  "react-dom": "18.2.0",
+  "lucide-react": "^0.265.0",
+  "qrcode": "^1.5.1",
+  "canvas": "^2.11.2",
+  "openai": "^4.30.0",
+  "tailwindcss": "^3.4.1",
+  "postcss": "^8.4.31",
+  "autoprefixer": "^10.4.16"
+}
+
 }
